--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "type": "git",
     "url": "git+https://github.com/isonnymichael/simplepopup-framework.git"
   },
-  "author": "Agung Sundoro",
+  "author": "Sonny Michael Wijaya",
   "license": "LGPL-3.0",
   "bugs": {
     "url": "https://github.com/isonnymichael/simplepopup-framework/issues"
